トップページのビュー作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,12 @@
  *= require_self
  */
 // Custom bootstrap variables must be set or imported *before* bootstrap.
+
+@import "bulma";
+
+.main-image {
+	height: 940px;
+	background-image: url(top_image.png);
+	background-repeat: no-repeat;
+	background-size: contain;
+}
