--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,1 +1,26 @@
-
+<section class="section">
+  <article class="media">
+    <div class="media-content">
+      <div class="content has-text-centered">
+        <p>
+          <strong class="is-size-1" style="font-family: arial;">Tripnote</strong>
+        </p>
+      </div>
+      <div class="columns is-centered">
+        <div class="column is-5">
+          <br>
+          <%= link_to "投稿を見てみる", article_path, class: "button is-warning is-light is-fullwidth" %>
+          <br>
+        </div>
+      </div>
+    </div>
+  </article>
+  <br>
+  <div class="columns is-centered">
+    <div class="column">
+      <figure>
+        <div class="main-image"></div>
+      </figure>
+    </div>
+  </div>
+</section>
