--- a/app/assets/stylesheets/articles/index.css
+++ b/app/assets/stylesheets/articles/index.css
@@ -1,5 +1,18 @@
-.article-img {
-  width: 33vh;
-  height: 33vh;
+
+.article-img-content {
+  position: relative;
 }
+
+.article-img {
+  width: 600px;
+  height: 480px;
+}
+
+
+.article-info {
+  background-color: #FFF;
+  color: black;
+  padding: 1vw;
+}
+
 
