--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,39 +1,24 @@
-<<<<<<< Updated upstream
-<section class="section">
-  <article class="media">
-    <div class="media-content">
-      <div class="content has-text-centered">
-        <p>
-          <strong class="is-size-1" style="font-family: arial;">Tripnote</strong>
-        </p>
-      </div>
-      <div class="columns is-centered">
-        <div class="column is-5">
-          <br>
-          <%= link_to "投稿を見てみる", article_path, class: "button is-warning is-light is-fullwidth" %>
-          <br>
-        </div>
-      </div>
+<div class="article-contents">
+  <h2 class='title'>投稿一覧</h2>
+  <ul class='article-lists'>
 
-    </div>
-  </article>
-  <br>
-  <div class="columns is-centered">
+  <div class="columns">
     <div class="column">
-      <figure>
-        <div class="main-image"></div>
-      </figure>
+       <% @articles.each do |article| %>
+         <div class='article-img-content'>
+           <%= image_tag  article.image, class: "article-img" %>
+         </div>
+         <div class="article-info">
+           <div class="article-category">
+            <h2>カテゴリー</h2><span class="tag is-primary"><%= article.category.name %>
+         </div>
+         <div class="article-country">
+           <h2>都道府県<h2><span class="tag is-primary"><%= article.country.name %></span>
+         </div>
+         <div class="article-text">
+           <h2>コンテンツ</h2><span class="tag is-primary"><%= article.instruction %></span>
+        </div>
     </div>
 
-        <div class="article-text">
-      <%= article.instruction %>
-    </div>
-
-    <div class="column is-6">
-       <figure class="image is-5by4">
-           <%= image_tag article.image, class: "article-image"%>
-       </figure>
-
-    </div>
   </div>
-</section>
+<% end %>
