詳細表示機能の実装

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -17,8 +17,19 @@
          </div>
          <div class="article-text">
            <h2>コンテンツ</h2><span class="tag is-primary"><%= article.instruction %></span>
-        </div>
-    </div>
+          </div>
 
+          <div class="bottons">
+            <%=link_to "詳細を見る",article_path(article), class: "button is-info is-light" %>
+          </div>
+
+         <% end %>
+   </div>
   </div>
-<% end %>
+          
+
+
+
+
+
+
