--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,23 +14,23 @@
 
   <body>
 
-    <nav class="navbar is-primary">
+    <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <%= link_to root_path, class: "navbar-item" do %>
           <h1 class="title is-5" style="font-family: arial;">Tripnote</h1>
         <% end %>
-        <div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
-          <span></span>
-          <span></span>
-          <span></span>
+        <div class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
         </div>
-      </div>
+
+
 
       <% if user_signed_in? %>
-        <div id="navbarExampleTransparentExample" class="navbar-menu">
+        <div id="navbarBasicExample" class="navbar-menu">
           <div class="navbar-item">
             <%= link_to "投稿一覧", articles_path, class: "navbar-item button is-warning is-light" %>
-
          </div>
           <div class="navbar-item">
             <%= link_to "投稿する", new_article_path, class: "navbar-item button is-warning is-light" %>
@@ -51,7 +51,7 @@
           </div>
         </div>
       <% else %>
-        <div id="navbarExampleTransparentExample" class="navbar-menu">
+        <div id="navbarBasicExample" class="navbar-menu">
           <div class="navbar-item">
             <%= link_to "投稿一覧", articles_path, class: "navbar-item button is-warning is-light" %>
           </div>
@@ -69,7 +69,32 @@
           </div>
         </div>
       <% end %>
-    </nav>
+        <div class="navbar-end">
+            <div class="navbar-item">
+               <div class="field is-grouped">
+                 <p class="control">
+                  <a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet" data-social-target="https://bulma.io" target="_blank" href="https://twitter.com/intent/tweet?text=Bulma: a modern CSS framework based on Flexbox&amp;hashtags=bulmaio&amp;url=https://bulma.io&amp;via=jgthms">
+                    <span class="icon">
+                      <i class="fab fa-twitter"></i>
+                    </span>
+                    <span>
+                     Tweet
+                    </span>
+                  </a>
+                 </p>
+                 <p class="control">
+                  <a class="button is-primary" href="https://github.com/jgthms/bulma/releases/download/0.9.1/bulma-0.9.1.zip">
+                      <span class="icon">
+                        <i class="fas fa-download"></i>
+                      </span>
+                      <span>Download</span>
+                   </a>
+                </p>
+              </div>
+           </div>
+        </div>
+      </div>
+     </nav>
     <%= yield %>
   </body>
 </html>
