--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -10,7 +10,7 @@
       <div class="columns is-centered">
         <div class="column is-5">
           <br>
-          <%= link_to "投稿を見てみる", articles_path, class: "button is-warning is-light is-fullwidth" %>
+          <%= link_to "みんなの投稿を見てみる", articles_path, class: "button is-warning is-light is-fullwidth" %>
           <br>
         </div>
       </div>
