--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -32,6 +32,7 @@
            <footer class="card-footer">
               <% if @article.user.id == current_user.id %>
                 <%= link_to "編集する", edit_article_path(@article), class: "card-footer-item" %>
+                <%= link_to "削除する", article_path(@article.id), method: :delete, class:'card-footer-item' %>
               <% end %>
            </footer>
          </div>
