--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,7 +12,7 @@
       <label class="form-text">ニックネーム</label>
       <span class="indispensable">必須</span>
     </div>
-          <%= f.text_area :name, class:"input-default", id:"nickname", placeholder:"例) taro", maxlength:"40" %>
+          <%= f.text_area :nickname, class:"input-default", id:"nickname", placeholder:"例) taro", maxlength:"40" %>
     </div>
 
 
