コメント投稿機能の実装

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -29,6 +29,20 @@
             </tr>
           </table>
 
+
+  <div class="card-content">
+    <div class="media">
+      <div class="media-content">
+        <% if user_signed_in? %>
+          <%= form_with(model: [@article, @comment], local: true) do |form| %>
+           <%= form.text_area :text, placeholder: "コメントする", rows: "2" %>
+           <%= form.submit "SEND" %>
+        <% end %>
+        <% else %>
+           <strong><p>※※※ コメントの投稿には新規登録/ログインが必要です ※※※</p></strong>
+         <% end %>
+  </div>
+
            <footer class="card-footer">
               <% if @article.user.id == current_user.id %>
                 <%= link_to "編集する", edit_article_path(@article), class: "card-footer-item" %>
