--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,5 @@
-<section class="hero is-success">
-  <div class="hero-body">
-    <div class="container">
-      <h1 class="title">
-        マイページ
-      </h1>
-    </div>
-  </div>
-</section>
+<h1 class="title">マイページ</h1>
+
 
 <section class="section">
   <div class="container">
@@ -15,7 +8,7 @@
         <div class="columns is-centered">
           <div class="column is-4">
             <figure class="image is-128x128"  style="margin-left: auto; margin-right: auto;">
-              <%= attachment_image_tag @user, :profile_image, fallback: "no-image.png", class: "profile_image is-rounded" %>
+                <%= image_tag @user.avatar.url, class: "profile_image is-rounded" %> 
             </figure>
           </div>
           <div class="column is-8">
@@ -24,14 +17,14 @@
                 <td class="is-size-4">
                   <strong><%= @user.nickname %></strong>
                 </td>
-                <% if @user.id == current_user.id %>
+              <% if @user.id == current_user.id %>  
                 <td class="is-size-4">
                   <%= @user.email %>
                 </td>
                 <td>
                     <%= link_to "編集", edit_user_path(@user), class: "button is-primary" %>
                 </td>
-                <% end %>
+              <% end %> 
               </tr>
             </table>
             <table class="table is-fullwidth">
