--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,61 +1,79 @@
 <h4 class="title is-4 ">投稿詳細</h4>
 
-<div class="card">
-  <div class="card-image">
-     <figure class="image is-5by4">
-        <%= image_tag @article.image, class: "article-img" %>
-      </figure>
-  </div>
-  <div class="card-content">
-    <div class="media">
-      <div class="media-content">
-         <p class="title is-4"><%= @article.instruction %></p>
-      </div>
-      </div>
-        <div class="content">
-          <table class="table is-narrow">
-            <tr>
-             <th>投稿者</th>
-             <td><%= @article.user.nickname%></td>
-            </tr>
-            <tr>
-              <th>カテゴリー</th>
-              <td><%= @article.category.name %></td>
-            </tr>
+<section class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-7">
+        <div class="card">
+          <div class="card-image">
+            <figure class="image is-4by3">
+               <%= image_tag @article.image, class: "article-img" %>
+            </figure>
+         </div>
+         <div class="card-content">
+          <div class="media">
+             <div class="media-content">
+               <p class="title is-4"><%= @article.instruction %></p>
+             </div>
+          </div>
+          <div class="content">
+            <table class="table is-narrow">
+              <tr>
+               <th>投稿者</th>
+               <td><%= @article.user.nickname%></td>
+              </tr>
+              <tr>
+                <th>カテゴリー</th>
+                <td><%= @article.category.name %></td>
+              </tr>
                 
-            <tr>
-              <th>都道府県</th>
-              <td><%=@article.country.name%>
-            </tr>
+               <tr>
+                <th>都道府県</th>
+                <td><%=@article.country.name%>
+              </tr>
           </table>
 
 
+          <div class="card-content">
+            <div class="media">
+               <div class="media-content">
+                <% if user_signed_in? %>
+                  <%= form_with(model: [@article, @comment], local: true) do |form| %>
+                  <%= form.text_area :body, class:"textarea" %>
+                 <%= form.submit "SEND" , class:"button is-warning"%>
+              <% end %>
+              <% else %>
+               <strong><p>※※※ コメントの投稿には新規登録/ログインが必要です ※※※</p></strong>
+             <% end %>
+           </div>
+
+      
   <div class="card-content">
     <div class="media">
-      <div class="media-content">
-        <% if user_signed_in? %>
-          <%= form_with(model: [@article, @comment], local: true) do |form| %>
-           <%= form.text_area :text, placeholder: "コメントする", rows: "2" %>
-           <%= form.submit "SEND" %>
+       <div class="media-content">
+        <h4>＜コメント一覧＞</h4>
+        <% @comments.each do |comment| %>
+          <p>
+            <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}" %>：</strong>
+            <%= comment.text %>
+          </p>
+          <% if comment.user.id == @article.user.id %>
+            <%= link_to "コメント削除", article_comment_path(@article, comment), method: :delete %>
+          <% end %>
         <% end %>
-        <% else %>
-           <strong><p>※※※ コメントの投稿には新規登録/ログインが必要です ※※※</p></strong>
-         <% end %>
   </div>
 
-           <footer class="card-footer">
-              <% if @article.user.id == current_user.id %>
-                <%= link_to "編集する", edit_article_path(@article), class: "card-footer-item" %>
-                <%= link_to "削除する", article_path(@article.id), method: :delete, class:'card-footer-item' %>
-              <% end %>
-           </footer>
-         </div>
-         </div>
+   <div class="card-content">
+      <div class="media">
+        <div class="media-content">
+          <% if @article.user.id == current_user.id %>
+             <%= link_to "投稿を編集する", edit_article_path(@article), class: "card-footer-item" %>
+             <%= link_to "投稿を削除する", article_path(@article.id), method: :delete, class:'card-footer-item' %>
+          <% end %>
         </div>
       </div>
-    </div>
-  </div>
-</section>
+   </div>
+</div>
   
   
 
