--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -40,18 +40,18 @@
                  <% if user_signed_in? %>
                    <%= form_with(model: [@article, @comment], local: true) do |form| %>
                    <%= form.text_area :text, class:"textarea" %>
-                   
+            </div>  
+              <div class="field">
+                <p class="control">
+                   <%= form.submit "SEND" , class:"button is-warning"%>
+                </p>
+              </div>
                  <% end %>
                </p>
                  <% else %>
                   <strong><p>※※※ コメントの投稿には新規登録/ログインが必要です ※※※</p></strong>
                  <% end %>
             </div>
-            <div class="field">
-               <p class="control">
-                  <button class="button">送信</button>
-               </p>
-             </div>
           </div>
 
       
