--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,3 +40,50 @@
     </div>
   </div>
 </section>
+
+
+<section class="section">
+  <div class="container">
+    <div class="columns is-multiline">
+      <% @user.articles.each do |article| %>
+        <div class="column is-4">
+          <div class="card">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <%= link_to article_path(article) do %>
+                  <%= image_tag  article.image, class: "article-img" %>
+                <% end %>
+              </figure>
+            </div>
+            <div class="card-content">
+              <div class="media">
+                <div class="media-content">
+                  <%= link_to articles_path(article), class: "panel-block" do %>
+                    <span class="panel-icon">
+                      <i class="fas fa-eye" aria-hidden="true"></i>
+                    </span>
+                    この投稿を見る
+                  <% end %>
+                  <% if @user.id == current_user.id %>
+                    <%= link_to edit_article_path(article), class: "panel-block" do %>
+                      <span class="panel-icon">
+                        <i class="fas fa-edit"></i>
+                      </span>
+                      この投稿を編集する
+                    <% end %>
+                    <%= link_to article_path(article), method: :delete, data: {confirm: "削除しますか？"}, class: "panel-block" do %>
+                      <span class="panel-icon">
+                        <i class="fas fa-trash"></i>
+                      </span>
+                      この投稿を削除する
+                    <% end %>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</section>
