--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -29,7 +29,7 @@
                 
                <tr>
                 <th>都道府県</th>
-                <td><%=@article.country.name%>
+                <td><%=@article.prefecture.name%>
               </tr>
           </table>
 
