--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -15,7 +15,7 @@
                 
               <tr>
                <th>都道府県</th>
-               <td><%=article.country.name%>
+               <td><%=article.prefecture.name%>
              </tr>
 
               <tr>
