--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -43,11 +43,18 @@
           <span class="indispensable">必須</span>
         </div>
         <%= f.collection_select(:category_id, Category.all, :id, :name, {class:"select-box", id:"article-category"}) %>
+
+        <div class="weight-bold-text">
+          国名
+          <span class="indispensable"></span>
+        </div>
+        <%= f.country_select :country, selected: "JP" %>
+
         <div class="weight-bold-text">
           都道府県
           <span class="indispensable">必須</span>
         </div>
-        <%= f.collection_select(:country_id, Country.all, :id, :name, {class:"select-box", id:"article-counrty"}) %>
+        <%= f.collection_select(:prefecture_id, Prefecture.all, :id, :name, {class:"select-box", id:"article-counrty"}) %>
       </div>
     </div>
     <%# /カテゴリーと都道府県選択 %>
