国名表示の編集

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -26,6 +26,11 @@
                 <th>カテゴリー</th>
                 <td><%= @article.category.name %></td>
               </tr>
+
+              <tr>
+                <th>国名コード</th>
+                <td><%=@article.country %></td>
+              </tr>
                 
                <tr>
                 <th>都道府県</th>
