--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,9 +1,5 @@
-<div class="items-sell-contents">
-  <header class="items-sell-header">
-
-  </header>
   <div class="items-sell-main">
-    <h2 class="items-sell-title">投稿内容を入力</h2>
+    <h2 class="items-sell-title">投稿内容を編集</h2>
     <%= form_with model: @article, local: true do |f| %>
     
                  
@@ -61,17 +57,9 @@
 
     <%# 下部ボタン %>
     <div class="sell-btn-contents">
-      <%= f.submit "投稿する" , class:"sell-btn" %>
+      <%= f.submit "変更する" , class:"sell-btn" %>
+      <%=link_to 'もどる', article_path(@article.id), class:"back-btn" %>
     </div>
     <%# /下部ボタン %>
   </div>
   <% end %>
-
-
-
-
-
- 
-
-
-
