--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,8 @@
     </h1>
   </div>
 
+   <%= render 'shared/error_messages', model: f.object %>
+
 
   <div class="form-group">
     <div class='form-text-wrap'>
