検索機能の実装

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -47,8 +47,8 @@
           <div class="content">
             <table class="table is-narrow">
               <tr>
-               <th>投稿者</th>
-               <td><%= @article.user.nickname%></td>
+               <th><small>投稿者</small></th>
+               <td><strong><%= @article.user.nickname%><strong></td>
               </tr>
               <tr>
                 <th>カテゴリー</th>
