--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,28 +72,18 @@
         <div class="navbar-end">
             <div class="navbar-item">
                <div class="field is-grouped">
-                 <p class="control">
-                  <a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet" data-social-target="https://bulma.io" target="_blank" href="https://twitter.com/intent/tweet?text=Bulma: a modern CSS framework based on Flexbox&amp;hashtags=bulmaio&amp;url=https://bulma.io&amp;via=jgthms">
-                    <span class="icon">
-                      <i class="fab fa-twitter"></i>
-                    </span>
-                    <span>
-                     Tweet
-                    </span>
-                  </a>
-                 </p>
-                 <p class="control">
-                  <a class="button is-primary" href="https://github.com/jgthms/bulma/releases/download/0.9.1/bulma-0.9.1.zip">
-                      <span class="icon">
-                        <i class="fas fa-download"></i>
-                      </span>
-                      <span>Download</span>
-                   </a>
-                </p>
+                 <%= form_with(url: search_articles_path, local: true, method: :get, class: "search-form") do |form| %>
+                   <%= form.text_field :keyword, class: "search-input", placeholder: "投稿を検索する" , autofocus: true%>
+                   <%= form.submit "検索", class: "button is-primary" %>
+                 <% end %>          
               </div>
            </div>
         </div>
       </div>
+
+
+
+
      </nav>
     <%= yield %>
   </body>
