--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,10 @@
- <h2 class='title'>投稿一覧</h2>
+<section class="hero is-small">
+  <div class="hero-body">
+    <p class="title">
+      投稿一覧
+    </p>
+  </div>
+</section>
 
   <div class="card-content">
     <div class="content">
