--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,10 @@
-<h1 class="title">ユーザー編集</h1>
+<section class="hero is-small">
+  <div class="hero-body">
+    <p class="title">
+      ユーザー編集
+    </p>
+  </div>
+</section>
 
 <section class="section">
   <div class="container">
