--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,10 @@
-<h4 class="title is-4 ">投稿詳細</h4>
+<section class="hero is-small">
+  <div class="hero-body">
+    <p class="title">
+      投稿詳細
+    </p>
+  </div>
+</section>
 
 <section class="section">
   <div class="container">
