投稿削除機能のための修正

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,7 +26,7 @@
               </tr>
               <tr>
                 <td class="is-size-4">
-                   <strong><%= @user.nickname %></strong>
+                 <strong><%= @user.nickname %></strong>
                 </td>
               </tr>
               <% if @user.id == current_user.id %>  
@@ -80,7 +80,7 @@
                       </span>
                       この投稿を編集する
                     <% end %>
-                    <%= link_to article_path(article), method: :delete, data: {confirm: "削除しますか？"}, class: "panel-block" do %>
+                    <%= link_to article_path(article.id), method: :delete, data: {confirm: "削除しますか？"}, class: "panel-block" do %>
                       <span class="panel-icon">
                         <i class="fas fa-trash"></i>
                       </span>
