--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
     <div class="columns is-centered">
       <div class="column is-8">
         <div class="columns is-centered">
-          <div class="column is-4">
+          <div class="profile">
             <figure class="image is-128x128"  style="margin-left: auto; margin-right: auto;">
                 <%= image_tag @user.avatar.url, class: "profile_image is-rounded" %> 
             </figure>
@@ -29,6 +29,12 @@
                  <strong><%= @user.nickname %></strong>
                 </td>
               </tr>
+              <tr>
+                <td>
+                  <%= @user.profile %>
+                </td>
+              </tr>
+            </table>
               <% if @user.id == current_user.id %>  
                 <td>
                     <%= link_to "編集", edit_user_path(@user), class: "button is-primary" %>
@@ -36,13 +42,7 @@
               <% end %> 
               </tr>
             </table>
-            <table class="table is-fullwidth">
-              <tr>
-                <td>
-                  <%= @user.profile %>
-                </td>
-              </tr>
-            </table>
+
           </div>
         </div>
       </div>
